# android_external_gello-env

./: .gitignore  .gn  BUILD.gn  DEPS
base/: BUILD.gn  base.gypi  base_switches.cc  base_switches.h
base/android/linker/: config.gni
build_overrides/: v8.gni
cc/layers/: picture_layer_impl.cc  picture_layer_impl.h
cc/output/: delegating_renderer.cc  direct_renderer.cc  direct_renderer.h  gl_renderer.cc  gl_renderer.h  gl_renderer_unittest.cc  renderer.h
cc/tiles/: picture_layer_tiling.h  tile_manager.cc  tile_manager.h
cc/trees/: layer_tree_host_impl.cc  layer_tree_host_impl.h
chrome/: chrome.gyp  chrome_browser.gypi  chrome_tests_unit.gypi  version.gni
chrome/android/: BUILD.gn  java_sources.gni
chrome/android/java/: AndroidManifest.xml  proguard.flags
chrome/app/: chrome_crash_reporter_client.cc
chrome/browser/: chrome_browser_main_android.cc  chrome_content_browser_client.cc  renderer_preferences_util.cc
chrome/browser/android/: chrome_entry_point.cc  dev_tools_server.cc  tab_web_contents_delegate_android.cc  tab_web_contents_delegate_android.h
chrome/browser/download/: chrome_download_manager_delegate.cc  download_prefs.cc  download_request_limiter.cc
chrome/browser/geolocation/: geolocation_permission_context.cc  geolocation_permission_context.h
chrome/browser/media/: media_permission.cc  media_stream_device_permission_context.cc  media_stream_device_permission_context_unittest.cc  media_stream_device_permissions.cc  media_stream_devices_controller.cc  media_stream_devices_controller.h  media_stream_infobar_delegate_android.cc  media_stream_infobar_delegate_android.h
chrome/common/: chrome_switches.cc  chrome_switches.h  pref_names.cc  pref_names.h
chrome/renderer/: BUILD.gn
chrome/test/: BUILD.gn
components/mime_util/: mime_util.cc
components/safe_browsing_db/: BUILD.gn
components/url_matcher/: BUILD.gn  regex_set_matcher.cc  regex_set_matcher.h  substring_set_matcher.cc  substring_set_matcher.h  url_matcher.cc  url_matcher.h
content/: content.gyp  content_common.gypi
content/browser/: child_process_security_policy_impl.cc
content/child/: blink_platform_impl.cc  runtime_features.cc
content/common/: frame_messages.h  view_messages.h
content/renderer/: render_frame_impl.cc  render_frame_impl.h  render_thread_impl.cc  render_view_browsertest.cc  render_view_impl.cc  render_view_impl.h  renderer_webcookiejar_impl.cc
google_apis/: google_api_keys.cc
gpu/GLES2/: gl2chromium_autogen.h
gpu/command_buffer/: build_gles2_cmd_buffer.py  cmd_buffer_functions.txt
ipc/: BUILD.gn  ipc.gypi  ipc_message_start.h
media/blink/: renderer_media_player_interface.h  webmediaplayer_cast_android.h  webmediaplayer_delegate.h  webmediaplayer_impl.cc  webmediaplayer_impl.h  webmediaplayer_impl_unittest.cc
mojo/gpu/: mojo_gles2_impl_autogen.cc  mojo_gles2_impl_autogen.h
net/: BUILD.gn  net_common.gypi
skia/: skia_library.gypi  skia_library_opts.gyp
swe/: config.gni
swe/channels/cm/branding/: BRANDING
swe/channels/cm/res/raw/: bookmarks_preload  home_pages_preload  search_engines_preload
swe/channels/cm/res/values/: strings.xml
swe/channels/cm/values/: strings.xml
swe/channels/cyngn/res/raw/: bookmarks_preload  home_pages_preload  search_engines_preload
swe/channels/cyngn/res/raw-mcc214/: bookmarks_preload
swe/channels/cyngn/res/values/: values.xml
swe/channels/cyngn/src/org/codeaurora/swe/partnerbrowsercustomizations/: PartnerCustomizationsContract.java
swe/docs/: channels.md  custom_download.md  custom_homepage.md  download_enhancements.md  exit_dialog.md  index.md  media_download.md  preload_bookmarks.md  sync_build.md
swe/tools/: swe_channels_dirs.py  swe_version.py
testing/variations/: fieldtrial_testing_config_android.json
tools/: licenses.py
ui/gl/: generate_bindings.py  gl_bindings_api_autogen_egl.h  gl_bindings_api_autogen_gl.h  gl_bindings_autogen_egl.cc  gl_bindings_autogen_egl.h  gl_bindings_autogen_gl.cc  gl_bindings_autogen_gl.h  gl_bindings_autogen_mock.cc  gl_bindings_autogen_mock.h  gl_mock_autogen_gl.h  gl_surface.cc  gl_surface.h  gl_surface_egl.cc  gl_surface_egl.h
ui/native_theme/: native_theme_base.cc
url/: BUILD.gn  url.gyp
(+285 files in other folders)
